force-app/main/default/objects/Property_Disposition__c/Property_Disposition__c.object-meta.xml
<CustomObject>
    <label>Property Disposition</label>
    <nameField>
        <displayFormat>PD-{000}</displayFormat>
        <label>Property Disposition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Dispositions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>