force-app/main/default/objects/Property_Disposition__c/fields/Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Date__c</fullName>
    <label>Disposition Date</label>
    <type>Date</type>
</CustomField>