force-app/main/default/objects/Property_Disposition__c/fields/Disposition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Reason__c</fullName>
    <label>Disposition Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Foreclosure</fullName>
            </value>
            <value>
                <fullName>Short Sale</fullName>
            </value>
            <value>
                <fullName>Transfer to Family</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Estate Settlement</fullName>
            </value>
            <value>
                <fullName>Condemnation</fullName>
            </value>
            <value>
                <fullName>Demolition</fullName>
            </value>
            <value>
                <fullName>Exchange (1031 Exchange)</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Liquidation</fullName>
            </value>
            <value>
                <fullName>End of Lease</fullName>
            </value>
            <value>
                <fullName>Divorce Settlement</fullName>
            </value>
            <value>
                <fullName>Business Sale</fullName>
            </value>
            <value>
                <fullName>Investment Exit</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Upgrade to Larger Property</fullName>
            </value>
            <value>
                <fullName>Downsizing</fullName>
            </value>
            <value>
                <fullName>Portfolio Restructuring</fullName>
            </value>
            <value>
                <fullName>Tax Sale</fullName>
            </value>
            <value>
                <fullName>End of Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>