force-app/main/default/objects/Property_Disposition__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property Dispositions</relationshipLabel>
    <relationshipName>Property_Dispositions</relationshipName>
    <type>Lookup</type>
</CustomField>