force-app/main/default/objects/Property_Disposition__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Property_Transaction__c</referenceTo>
    <relationshipLabel>Property Dispositions</relationshipLabel>
    <relationshipName>Property_Dispositions</relationshipName>
    <type>Lookup</type>
</CustomField>